# microprocessor-arq-ula

./: .gitignore  README.md  Reglas.txt  borrar.sh
.cache/clangd/index/: Adder.cpp.C31AF6BC80ADCFDC.idx  Adder.h.3A78FCFFBACC6732.idx  Testbench.cpp.CF2DA5CC5FCE0C38.idx  Testbench.h.E02B1E7D47655A54.idx  datapath.cpp.ACAE12AF6ACAAD3A.idx  datapath.h.B391B6CF6BEC1350.idx  instruction_memory.cpp.35CDE26400819B85.idx  instruction_memory.h.D7C33DAB53DF8EFE.idx  main.cpp.0AC3D0CAAECAEBC4.idx  pc.cpp.4BF0004CF715F9BE.idx  pc.h.20A9B60370D4E720.idx  phase1.cpp.6991A781A4274EFC.idx  phase1.h.D15EFAACBDDA21C8.idx  register_if_id.cpp.68283B357945EC0E.idx  register_if_id.h.0662C442FFA0BFB7.idx  utils.cpp.A8F5CAE39471A89B.idx
src/: Adder.cpp  Adder.h  CMakeLists.txt  Cell.cpp  Cell.h  Makefile  Mux.cpp  Mux.h  Testbench.cpp  Testbench.h  adder_2.cpp  adder_2.h  alu.cpp  alu.h  and_branch.cpp  and_branch.h  camino.cpp  camino.h  control_unit.cpp  control_unit.h  data_memory.cpp  data_memory.h  datapath.cpp  datapath.h  ejemplo03.asm  ejemplo04.asm  ejemplo05.asm  ejemplo06.asm  instruction_memory.cpp  instruction_memory.h  main.cpp  mux_wb.cpp  mux_wb.h  outputo  pc.cpp  pc.h  register.cpp  register.h  register_ex_mem.cpp  register_ex_mem.h  (+12 more)
src/.cache/clangd/index/: Adder.cpp.C31AF6BC80ADCFDC.idx  Testbench.cpp.CF2DA5CC5FCE0C38.idx  Testbench.h.E02B1E7D47655A54.idx  datapath.cpp.ACAE12AF6ACAAD3A.idx  datapath.h.B391B6CF6BEC1350.idx  instruction_memory.cpp.35CDE26400819B85.idx  main.cpp.0AC3D0CAAECAEBC4.idx  pc.cpp.4BF0004CF715F9BE.idx  pc.h.20A9B60370D4E720.idx  phase1.cpp.6991A781A4274EFC.idx  register_if_id.cpp.68283B357945EC0E.idx  register_if_id.h.0662C442FFA0BFB7.idx  utils.cpp.A8F5CAE39471A89B.idx  utils.h.800F35C37F2B6B93.idx
src/modules/phase1/: Adder.cpp  CMakeLists.txt  instruction_memory.cpp  instruction_memory.h  pc.cpp  register_if_id.cpp  register_if_id.h
src/phases/: CMakeLists.txt  phase1.cpp  phase1.h
src/tests/: CMakeLists.txt  ejemplo04.asm
src/utils/: CMakeLists.txt  Makefile  Testbench.cpp  utils.cpp  utils.h
v2/src/: datapath.h
